# IDM-VTON-FIX

./: .gitignore  README.md  pyproject.toml
gradio_demo/: app.py  utils_mask.py
mydemo/: garment_labels.json  mydemo.py
preprocess/humanparsing/: run_parsing.py
preprocess/openpose/: run_openpose.py
preprocess/openpose/annotator/openpose/: __init__.py  body.py
src/: tryon_pipeline.py
